Keep degree specifier for rotate animations

--- a/tests/keyframe.css
+++ b/tests/keyframe.css
@@ -2,3 +2,8 @@
     0% { opacity: 0; }
   100% { opacity: 1; }
 }
+
+@-webkit-keyframes rotater {
+    0% { -webkit-transform:rotate(0deg); }
+  100% { -webkit-transform:rotate(360deg); }
+}
